changes to the game
use of database

--- a/templates/result.html
+++ b/templates/result.html
@@ -9,5 +9,7 @@
 
 <p>{{text}} </p>
 
-<p><a href="/">{{play_again}}</a></p>
+<p><a href="/game">{{play_again}}</a></p>
+
+<p><a href="/">New player</a></p>
 {% endblock content %}
