--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,11 @@
 
 {% block content %}
 <h1>Welcome to the Guess the secret number game</h1>
-<p>Try to guess what's the secret number.</p>
-
+<p>Enter your name and email and then you can play.</p>
 <form method="post" action="/">
-    <label for="guess_number">Enter number beetween 1 and 30:</label>
-    <input id="guess_number" name="number" type="number" min="1" max="30">
+    <input  name="name" type="text" placeholder="Enter name">
+    <br>
+     <input  name="email" type="email" placeholder="Enter your email">
     <br>
     <button type="submit">Submit</button>
 </form>
