--- a/templates/game.html
+++ b/templates/game.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+<h1>Hello {{user}}</h1>
 <p>Try to guess what's the secret number.</p>
 
 <form method="post" action="/game">
