--- a/templates/result.html
+++ b/templates/result.html
@@ -5,11 +5,12 @@
 {% endblock title %}
 
 {% block content %}
-<p>Hello here are your result</p>
+<div class="container">
+    <h2>Hello here are your result</h2>
 
 <p>{{text}} </p>
 
 <p><a href="/game">{{play_again}}</a></p>
+</div>
 
-<p><a href="/">New player</a></p>
 {% endblock content %}
