--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,13 @@
         {% block title %}
         <title>Guess game</title>
         {% endblock title %}
+        <link rel="stylesheet" href="/static/style.css">
     </head>
     <body>
+        <header>
+            {% block header %}
+            {% endblock header %}
+        </header>
         {% block content %}
         {% endblock content %}
     </body>
