--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Welcome to the Guess the secret number game</h1>
+<div class="container">
+    <h1>Welcome to the Guess the secret number game</h1>
 <p>Enter your name, email and password and then you can play.</p>
 <form method="post" action="/">
     <input  name="name" type="text" placeholder="Enter name">
@@ -12,4 +13,5 @@
     <br>
     <button type="submit">Submit</button>
 </form>
+</div>
 {% endblock content %}
